crates/bus-macros/tests/compile_fail/missing_subject.stderr
error: missing #[event(subject = "...")] attribute
 --> tests/compile_fail/missing_subject.rs:6:8
  |
6 | struct BadEvent {
  |        ^^^^^^^^
